--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "ava": "^1.4.1",
     "eslint": "^5.16.0"
+  },
+  "dependencies": {
+    "commander": "^2.20.0"
   }
 }
