--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "devDependencies": {
     "ava": "^1.4.1",
-    "eslint": "^5.16.0"
+    "eslint": "^5.16.0",
+    "sinon": "^7.3.1"
   },
   "dependencies": {
     "commander": "^2.20.0"
