--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "ava ./test/**.test.js --verbose",
+    "coverage": "nyc ava",
     "build": "pkg ./bin/index.js --out-path ./release"
   },
   "bin": {
@@ -15,7 +16,9 @@
   "license": "ISC",
   "devDependencies": {
     "ava": "^1.4.1",
-    "eslint": "^5.16.0"
+    "eslint": "^5.16.0",
+    "nyc": "^13.3.0",
+    "sinon": "^7.3.1"
   },
   "dependencies": {
     "pkg": "^4.3.7"
